# octocontrol

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: Globals.h  OctoPrintClient.cpp  OctoPrintClient.h  main.cpp
src/UI/: ButtonWidget.cpp  ButtonWidget.h  TextWidget.cpp  TextWidget.h  VectorButtonWidget.cpp  VectorButtonWidget.h  Widget.cpp  Widget.h
